[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tube-timing"
version = "0.1.0"
description = "CLI for TFL Unified API tube departures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
tube-timing = "tube_timing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
